[package]
name = "quarktrm"
version = "0.1.0"
edition = "2024"
description = "Quark Drive Media Manager - A Rust implementation for automatically saving shared files from Quark Drive"
authors = ["fllesser <fllessive@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/fllesser/quarktrm"
readme = "README.md"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Command-line interface
clap = { version = "4.3", features = ["derive"] }

# Configuration
config = "0.13"
toml = "0.7"
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for file renaming
regex = "1.8"

# Filesystem operations
walkdir = "2.3"
fs_extra = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Notification
notify-rust = "4.8"

# TLS support
rustls = "0.21"
rustls-native-certs = "0.6"

# Progress bars
indicatif = "0.17"

# Optional: media library support
emby = { version = "0.0.5-rc.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
assert_fs = "1.0"
mockito = "1.1"
wiremock = "0.5"

[features]
default = []
media-library = ["emby"]

[[bin]]
name = "quarktrm"
path = "src/main.rs"
