[package]
name = "quarktrm"
version = "0.1.0"
edition = "2024"
description = "Quark Drive Media Manager - A Rust implementation for automatically saving shared files from Quark Drive"
authors = ["fllesser <fllessive@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/fllesser/quarktrm"
readme = "README.md"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Command-line interface
clap = { version = "4.3", features = ["derive"] }

# Configuration
config = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for file renaming
regex = "1.8"

# Filesystem operations
walkdir = "2.3"
anyhow = "1.0"

[dev-dependencies]

[features]
default = []
media-library = []

[[bin]]
name = "quarktrm"
path = "src/main.rs"
